[package]
name = "balz"
version = "0.1.0"
authors = ["Dean De Carli <neaddean@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.0"
specs = { version = "0.16.1", features = ["specs-derive"] }
num = "0.3.1"
itertools = "0.10.0"
ncollide3d = "0.27.0"
nphysics3d = "0.19.0"
nalgebra = "0.24.0"
kiss3d = { version = "0.29.0", features = ["conrod"] }

tracing = { version = "0.1.22", features = ["log-always", "log"] }
tracing-timing = "0.4.3"

log = "0.4.13"
simplelog = "0.9.0"
